Initial Documentation Commit

--- a/docs/stylesheet/extra.css
+++ b/docs/stylesheet/extra.css
@@ -464,6 +464,9 @@
     display: none;
   }
 
+  .video iframe {
+    display: none;
+  }
 
   /* ================================================================================== */
   /* Grid Cards                                                                         */
