--- a/docs/stylesheet/extra.css
+++ b/docs/stylesheet/extra.css
@@ -288,19 +288,20 @@
 	background-color: var(--md-accent-fg-color) !important;
 }
 
-@media screen and (min-width: 76.25em) {
+/* Breaks Abbreviations */
+/* @media screen and (min-width: 76.25em) {
 	h1, h2, h3, h4, h5, h6 {
 		display: flex;
 		align-items: center;
 		flex-direction: row;
-	}
+	} */
 
   /* Sets icon location to left of header */
 	/* .headerlink {
 		order: -1;
 		margin-left: calc(var(--permalink-size) * -1 - var(--permalink-spacing)) !important;
-	} */
-}
+	}
+} */
 
 
 
